[tool.poetry]
name = "json_search"
version = "0.1.0"
description = ""
authors = ["Dibyajyoti Roy <dibyajyoti121987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
